k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asset-service
  labels:
    app.kubernetes.io/name: asset-service
    app.kubernetes.io/part-of: asset-service
